....I..... [ZBX-12793] fixed system compiler checks during source configuration (abs)
...G...... [ZBX-11970] fixed style for some enumerators and structure type declarations (abs, Andris)

--------------------------------------------------------------------------------
Changes for 3.4.7rc2

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.4.7rc1

Bug fixes:
........S. [ZBX-13194] fixed incorrect processing of zabbix[wcache,value,*] internal check (Sergejs)
.......PS. [ZBX-13060] added limitation for meaningless server reconnection attempts to incorrectly configured passive proxy (viktors)
...G...... [ZBX-13117] fixed vfs.dir.size with symbol links on Windows (MVekslers)
........S. [ZBX-12643] improved error log message in case Zabbix server database cannot be used due to empty "users" table (vso)
...G...... [ZBX-11720] fixed memory leak which breaks vfs.fs.size, vfs.fs.inode and vfs.dir.size items if compiled with LeakSanitizer (Andris)
........S. [ZBX-13131] fixed truncated multiline text values from network discovery SNMP checks (viktors)
........S. [ZBX-13343] fixed last trends update clock caching (wiper)
A......... [ZBX-13325] fixed trend.get() method with Oracle backend (Sasha)
..F....... [ZBX-13223] fixed graphs duplication in graph preview (ashubin)
...G...... [ZBX-13055] fixed problems with DNS resolver interface on NetBSD (valdis)
..F....... [ZBX-13345] removed SID from URL in screen edit mode (miks)
..F....... [ZBX-13214] added support of \0 matching group for regsub and iregsub methods (gcalenko, Sasha)
........S. [ZBX-13208] eliminated race condition that caused history collection for newly created items to start before preprocecessing steps finished syncing (vso)
.......P.. [ZBX-13130] fixed Zabbix proxy not to generate high network traffic when server does not accept data (vso)
..F....... [ZBX-13288] fixed image ghosting for mass update of map elements (vjaceslavs)