@@ -188,8 +188,8 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 	char			*ip, zone[MAX_STRING_LEN], buffer[MAX_STRING_LEN], *zone_str, *param;
 	struct in_addr		inaddr;
 #ifndef _WINDOWS
-#if __RES>=19991006
-	struct __res_state	res_state;
+#ifdef HAVE_RES_NINIT
+	struct __res_state	res_state_local;
 #else	/* thread-unsafe resolver API */
 	int			saved_nscount = 0, saved_retrans, saved_retry;
 	unsigned long		saved_options;
@@ -469,9 +469,9 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 		pDnsRecord = pDnsRecord->pNext;
 	}
 #else	/* not _WINDOWS */
-#if __RES>=19991006
-	memset(&res_state, 0, sizeof(res_state));
-	if (-1 == res_ninit(&res_state))	/* initialize always, settings might have changed */
+#ifdef HAVE_RES_NINIT
+	memset(&res_state_local, 0, sizeof(res_state_local));
+	if (-1 == res_ninit(&res_state_local))	/* initialize always, settings might have changed */
 #else
 	if (-1 == res_init())	/* initialize always, settings might have changed */
 #endif
@@ -480,8 +480,8 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 		return SYSINFO_RET_FAIL;
 	}
 
-#if __RES>=19991006
-	if (-1 == (res = res_nmkquery(&res_state, QUERY, zone, C_IN, type, NULL, 0, NULL, buf, sizeof(buf))))
+#ifdef HAVE_RES_NINIT
+	if (-1 == (res = res_nmkquery(&res_state_local, QUERY, zone, C_IN, type, NULL, 0, NULL, buf, sizeof(buf))))
 #else
 	if (-1 == (res = res_mkquery(QUERY, zone, C_IN, type, NULL, 0, NULL, buf, sizeof(buf))))
 #endif
@@ -498,11 +498,11 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 			return SYSINFO_RET_FAIL;
 		}
 
-#if __RES>=19991006
-		res_state.nsaddr_list[0].sin_addr = inaddr;
-		res_state.nsaddr_list[0].sin_family = AF_INET;
-		res_state.nsaddr_list[0].sin_port = htons(ZBX_DEFAULT_DNS_PORT);
-		res_state.nscount = 1;
+#ifdef HAVE_RES_NINIT
+		res_state_local.nsaddr_list[0].sin_addr = inaddr;
+		res_state_local.nsaddr_list[0].sin_family = AF_INET;
+		res_state_local.nsaddr_list[0].sin_port = htons(ZBX_DEFAULT_DNS_PORT);
+		res_state_local.nscount = 1;
 #else	/* thread-unsafe resolver API */
 		memcpy(&saved_ns, &(_res.nsaddr_list[0]), sizeof(struct sockaddr_in));
 		saved_nscount = _res.nscount;
@@ -514,18 +514,18 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 #endif
 	}
 
-#if __RES>=19991006
+#ifdef HAVE_RES_NINIT
 	if (0 != use_tcp)
-		res_state.options |= RES_USEVC;
+		res_state_local.options |= RES_USEVC;
 
-	res_state.retrans = retrans;
-	res_state.retry = retry;
+	res_state_local.retrans = retrans;
+	res_state_local.retry = retry;
 
-	res = res_nsend(&res_state, buf, res, answer.buffer, sizeof(answer.buffer));
-#	if __RES>=20090302
-	res_ndestroy(&res_state);
+	res = res_nsend(&res_state_local, buf, res, answer.buffer, sizeof(answer.buffer));
+#	if HAVE_RES_NDESTROY
+	res_ndestroy(&res_state_local);
 #	else
-	res_nclose(&res_state);
+	res_nclose(&res_state_local);
 #	endif
 #else	/* thread-unsafe resolver API */
 	saved_options = _res.options;
